[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "campusnav"
version = "3.0.0"
description = "A* navigation system for Azrieli College of Engineering, Jerusalem"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "matplotlib>=3.8"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=4", "ruff>=0.4", "black>=24"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
